[package]
name = "elasticsearch-stree-test"
version = "0.1.0"
authors = ["Sahil Goel <goelsahi@amazon.com>"]

[dependencies]
reqwest = "0.9.9"
serde = "1.0.85"
serde_derive = "1.0"
serde_json = "1.0"
rand = "0.6.5"
clap = "2.32"
lazy_static = "1.2.0"
tokio-core = "0.1"
tokio = "0.1.15"
futures = "0.1"